--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Yp</title>
+  <title>Kontact</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
-  <!-- <script src="../node_modules/jquery/dist/jquery.js"></script>
-  <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script> -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  
 </head>
 <body>
   <app-root></app-root>
